--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^5.9.24",
     "mongoose-unique-validator": "^2.0.3",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "slugify": "^1.4.5"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.0",
