--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-random-string": "^3.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mongoose": "^5.9.24",
